--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,10 +1,11 @@
 $white: #fff;
 $fondoboton:#A66E4E;
 $fondoabout: #75AABF;
-
+$fondo: $white;
 $fondogalery: #94CEF2;
 $rudy-pink: #d76c69;
 $verdoso: #038C7F;
+$fondocajaparrafo:#8DCBF2;
 
 $eerie-black: #121619;
 $raisin-black: #222323;
