--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -7,7 +7,7 @@ nav {
   background-image: url("../images/nav_inicio.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 5rem;
+  height: auto;
 }
 .scale-in-left {
 	-webkit-animation: scale-in-left 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
