--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,8 +13,10 @@
 @import 'layout/header';
 @import 'layout/nav';
 @import 'layout/main';
+@import 'layout/mainPageAbout';
+@import 'layout/mainPageclases';
 @import 'layout/footer';
 @import 'layout/form';
-@import 'layout/clases';
+
 
 @import 'components/buttons';
