--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -37,7 +37,7 @@ h1 {
   text-decoration: overline underline;
 }
 h2 {
-  color: $nickel;
+  color: $white;
   font-family: $playfair;
   font-weight: $bold;
   font-size: $x-large;
@@ -78,13 +78,14 @@ h3{
   font-weight: $ligth;
 }
 h5{
-  color: $raisin-black;
-  font-family: $playfair;
+  color: $white;
+  font-family: $monse;
   font-weight: $bold;
-  font-size: $x-large;
+  font-size: $xx-large;
   text-align: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
+  text-shadow: 0.8rem 0.8rem 0.8rem $white;
 }
 h6{
   color: $white;
@@ -108,11 +109,11 @@ li {
   font-size: $x-large;
   text-align: center;
   }
-  .colorLetra{
+  .direccioncursos{
     color: $white;
     font-family: $monse;
-    font-weight: $medium;
-    font-size: $medium;
+    font-weight: $bold;
+    font-size: $large;
     text-align: center;
   }
 .headerinicio{
@@ -159,4 +160,18 @@ hr{
 }
 .text_label{
   color: $white;
+  font-weight: $bold;
+}
+.colorletra_parrafo{
+  color: $raisin-black;
+  font-family: $monse;
+  font-weight: $boldblack;
+  font-size: $medium;
+  text-align: justify;
+}
+.courses__parrafo li{
+  color: $black;
+  font-family: $monse;
+  font-weight: $bold;
+  font-size: $medium;
 }
